<resources>
    <string name="app_name">TambakApp</string>
    <string name="title_kondisi">KONDISI</string>
    <string name="title_rincian">RINCIAN</string>
    <string name="title_sunting">SUNTING</string>
    <string name="tambak_name">Nama Tambak</string>

    <!-- Kondisi -->
    <string name="text_tambak">TAMBAK</string>
    <string name="text_cycle_start">Mulai Siklus</string>
    <string name="text_cycle_stop">Sudahi Siklus</string>
    <string name="text_kincir">Kincir</string>
    <string name="text_condition">Kesehatan Kincir</string>
    <string name="text_connection">Koneksi Jaringan</string>
    <string name="text_battery">Daya Baterai</string>
    <string name="text_load_unsuccessful">Gagal memuat</string>
    <string name="text_btn_retry">Coba lagi</string>

    <!-- Rincian -->
    <string name="text_dummy_notification">Test Notifikasi</string>

    <!-- Sunting -->
    <string name="device_info">ID:\nNama:\nKontak:\nVolume Notifikasi:</string>
    <string name="text_apply_user">Gunakan ID</string>
    <string name="text_add_sensor">Tambah Sensor</string>
    <string name="text_edit_tambak">Penyuntingan Tambak</string>
    <string name="text_edit_sensor">Penyuntingan Sensor</string>
    <string name="text_edit_alarm">Penyuntingan Alarm</string>
    <string name="text_edit_device">Penyuntingan Gawai</string>
</resources>