<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sunting.SuntingFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_device_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="?attr/cardColorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/device_info"
            android:textColor="?attr/textColorMain"
            android:textSize="17sp" />

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_device_info"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_add_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_add_sensor"
                android:textColor="?attr/textColorMain"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_edt_tambak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_edit_tambak"
                android:textColor="?attr/textColorMain"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_edt_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_edit_sensor"
                android:textColor="?attr/textColorMain"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_edt_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_edit_alarm"
                android:textColor="?attr/textColorMain"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_edt_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_edit_device"
                android:textColor="?attr/textColorMain"/>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>