<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/text_kincir"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_kincir"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                android:layout_marginStart="30dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_condition_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_condition"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    />

                <TextView
                    android:id="@+id/tv_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="@id/tv_condition_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="35dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    />

                <TextView
                    android:id="@+id/tv_battery_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="@id/tv_condition_text"
                    app:layout_constraintStart_toStartOf="@id/tv_condition_text"
                    android:layout_marginTop="30dp"
                    android:text="@string/text_battery"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    />

                <TextView
                    android:id="@+id/tv_battery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="@id/tv_battery_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="35dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    />

                <TextView
                    android:id="@+id/tv_connection_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="@id/tv_battery_text"
                    app:layout_constraintStart_toStartOf="@id/tv_condition_text"
                    android:layout_marginTop="30dp"
                    android:text="@string/text_connection"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    />

                <TextView
                    android:id="@+id/tv_connection"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="@id/tv_connection_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="35dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>






    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>